[PRM-1580] Simplified code in view

--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -26,13 +26,17 @@
 
 @(form: Form[_], pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = if(!request.session.get(SessionKeys.doYouWantToAppealBothPenalties).isDefined) {
-                            messages("makingALateAppeal.headingAndTitle")
-                        } else if (request.session.get(SessionKeys.doYouWantToAppealBothPenalties).contains("yes")) {
-                            messages("makingALateAppeal.headingAndTitle.multi")
-                        } else {
-                        messages("makingALateAppeal.headingAndTitle.first")
-                    },
+@areThereMultiplePenaltiesContent = @{
+    if(!request.session.get(SessionKeys.doYouWantToAppealBothPenalties).isDefined) {
+        messages("makingALateAppeal.headingAndTitle")
+    } else if (request.session.get(SessionKeys.doYouWantToAppealBothPenalties).contains("yes")) {
+        messages("makingALateAppeal.headingAndTitle.multi")
+    } else {
+        messages("makingALateAppeal.headingAndTitle.first")
+    }
+}
+
+@layout(pageTitle = areThereMultiplePenaltiesContent,
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
@@ -41,13 +45,7 @@
     @formHelper(action = controllers.routes.MakingALateAppealController.onSubmit()) {
         @characterCount(
             form("late-appeal-text"),
-            label = if(!request.session.get(SessionKeys.doYouWantToAppealBothPenalties).isDefined) {
-                    messages("makingALateAppeal.headingAndTitle")
-                } else if (request.session.get(SessionKeys.doYouWantToAppealBothPenalties).contains("yes")) {
-                    messages("makingALateAppeal.headingAndTitle.multi")
-                } else {
-                    messages("makingALateAppeal.headingAndTitle.first")
-                },
+            label = areThereMultiplePenaltiesContent,
             hint = Some(HtmlContent(messages("makingALateAppeal.p1"))),
             maxLength = Some(5000)
         )
