--- a/app/views/AppealSinglePenaltyPage.scala.html
+++ b/app/views/AppealSinglePenaltyPage.scala.html
@@ -23,15 +23,18 @@
         pageHeader: components.pageHeader
 )
 
-@(pageMode: PageMode, nextPage: String, penaltyInformation: String)(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
+@(pageMode: PageMode, nextPage: String, penaltyAmount: String, isLPP2: Boolean)(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
+
+@penaltyTypeMessage = @{
+    if(isLPP2) messages("penaltySelection.lpp2", penaltyAmount) else messages("penaltySelection.lpp1", penaltyAmount)
+}
 
 @layout(pageTitle = messages("appealSinglePenalty.headingAndTitle"),
   isPageFullWidth = false,
   optPageMode = Some(pageMode)) {
 
   @pageHeader(messages("appealSinglePenalty.headingAndTitle"))
-
-  <p class="govuk-body">@messages("appealSinglePenalty.p1", penaltyInformation)</p>
+  <p class="govuk-body">@messages("appealSinglePenalty.p1", penaltyTypeMessage)</p>
   <p class="govuk-body">@messages("appealSinglePenalty.p2")</p>
 
   @link(
