--- a/app/views/components/upload/uploadItem.scala.html
+++ b/app/views/components/upload/uploadItem.scala.html
@@ -35,7 +35,8 @@
 
                 <button type="button" class="multi-file-upload__remove-item govuk-link">
                     @messages("otherReason.uploadEvidence.button.remove")
-                    <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.file") <span class="multi-file-upload__number">{fileNumber}</span></span>
+                    <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.file") <span class="multi-file-upload__number">{fileNumber} </span>
+                        <span class="multi-file-upload__file-name"></span></span>
                 </button>
                 <span class="multi-file-upload__removing">@messages("otherReason.uploadEvidence.button.removing")</span>
             </div>
