[PRM-1697] Returned feedback url

--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -99,7 +99,7 @@
     </ul>
 
     <p class="govuk-!-padding-top-4 govuk-body-s" id="feedback-link">
-        <a href="@{appConfig.feedbackUrl(userRequest.uri)}" class="govuk-link">@messages("appealConfirmation.feedbackLink.1").trim</a> @messages("appealConfirmation.feedbackLink.2")
+        <a href="@{appConfig.csatFeedbackUrl}" class="govuk-link">@messages("appealConfirmation.feedbackLink.1").trim</a> @messages("appealConfirmation.feedbackLink.2")
     </p>
 
 
