--- a/app/views/reasonableExcuseJourneys/other/RemoveFilePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/RemoveFilePage.scala.html
@@ -19,7 +19,7 @@
 @this(layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
-        govukButton: GovukButton,
+        button: components.button,
         radios: components.radios)
 
 @(
@@ -43,6 +43,6 @@
       items = radioOptions
     )
 
-    @govukButton(Button(content = Text(messages("common.continue"))))
+    @button("common.continue")
   }
 }
