--- a/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
@@ -19,7 +19,7 @@
 @this(layout: Layout,
        bullets: components.bullets,
        formHelper: FormWithCSRF,
-       govukButton: GovukButton,
+       button: components.button,
        radios: components.radios)
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
@@ -38,6 +38,6 @@
               hint = Some(Html(messages("otherReason.uploadEvidence.question.hintText")))
               )
 
-              @govukButton(Button(content = Text(messages("common.continue"))))
+              @button("common.continue")
     }
 }
