--- a/app/views/agents/WhatCausedYouToMissTheDeadlinePage.scala.html
+++ b/app/views/agents/WhatCausedYouToMissTheDeadlinePage.scala.html
@@ -18,7 +18,7 @@
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
-        govukButton: GovukButton,
+        button: components.button,
         radios: components.radios)
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
@@ -35,6 +35,6 @@
             items = radioOptions
         )
 
-        @govukButton(Button(content = Text(messages("common.continue"))))
+        @button("common.continue")
     }
 }
