--- a/app/views/obligation/OtherRelevantInformationPage.scala.html
+++ b/app/views/obligation/OtherRelevantInformationPage.scala.html
@@ -22,7 +22,7 @@
 @this(layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
-        govukButton: GovukButton,
+        button: components.button,
         characterCount: components.characterCount)
 
 @(form: Form[_], postAction: Call, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
@@ -41,6 +41,6 @@
             maxLength = Some(5000)
         )
 
-        @govukButton(Button(content = Text(messages("common.continue"))))
+        @button("common.continue")
     }
 }
