removed extra text around file upload buttons

--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
@@ -78,6 +78,6 @@
         <div id="file-upload-form-group" class="govuk-form-group">
             @fileUploadDialog(form)
         </div>
-        @button("otherReason.uploadEvidence.noJs.button.uploadFile")otherReason.uploadEvidence.noJs.button.uploadFile"))))
+        @button("otherReason.uploadEvidence.noJs.button.uploadFile")
     </form>
 }
