--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadTakingLongerThanExpectedPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadTakingLongerThanExpectedPage.scala.html
@@ -33,6 +33,6 @@
     @pageHeader(messages("otherReason.uploadEvidence.takingLongerThanExpected.headingAndTitle"))
 
     @formHelper(action = postAction) {
-        @button("otherReason.uploadEvidence.takingLongerThanExpected.button.checkAgain")otherReason.uploadEvidence.takingLongerThanExpected.button.checkAgain"))))
+        @button("otherReason.uploadEvidence.takingLongerThanExpected.button.checkAgain")
     }
 }
