--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -43,3 +43,11 @@
         @button("common.continue")
     }
 }
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+      console.log('JavaScript is enabled');
+      const backLink = document.getElementById('back-link');
+      backLink.setAttribute('href', backLink.getAttribute('href').replace('&isJsEnabled=false', '') + '&isJsEnabled=true');
+    });
+</script>
