--- a/app/views/layouts/Layout.scala.html
+++ b/app/views/layouts/Layout.scala.html
@@ -47,7 +47,7 @@
     @if(appConfig.welshLanguageSupportEnabled) {@languageSelect()}
 
     @if(backLinkEnabled) {
-        @govukBackLink(BackLink(href = customBackLink.fold(controllers.routes.PreviousPageController.previousPage(optPageMode.get.page.toString, optPageMode.get.mode).url)(identity),
+        @govukBackLink(BackLink(href = customBackLink.fold(controllers.routes.PreviousPageController.previousPage(optPageMode.get.page.toString, optPageMode.get.mode, false).url)(identity),
             content = Text(messages("app.common.back")), attributes = Map("id" -> "back-link")))
     }
 }
@@ -77,9 +77,7 @@
     <script>window.HMRCFrontend.initAll();</script>
 } else {
     @scriptsBlock.get
-}
-    <script>document.cookie = 'jsenabled=true'</script>
-}
+}}
 
 @govukLayout(
     pageTitle = Some(messages("common.pageTitle", pageTitle, messages("service.name"))),
