PRM-Agent title POC

--- a/app/views/layouts/GovUkPageLayout.scala.html
+++ b/app/views/layouts/GovUkPageLayout.scala.html
@@ -55,7 +55,7 @@
  if(formHasErrors && pageTitle.isDefined) {
         Some(messages("error.prefix") + " " + pageTitle.get)
     } else {
-        pageTitle
+        Some(pageTitle.get +"- Agent")
     }
 }
 
