[PRM-2133] - Passed lang parameter to GOVUK layout and fixed Node.JS warnings

--- a/app/views/layouts/GovUkPageLayout.scala.html
+++ b/app/views/layouts/GovUkPageLayout.scala.html
@@ -97,5 +97,6 @@
     beforeContentBlock = beforeContentBlock,
     footerBlock = footerDefault,
     mainClasses = Some("govuk-main-wrapper--auto-spacing"),
-    bodyEndBlock = Some(bodyEndDefault)
+    bodyEndBlock = Some(bodyEndDefault),
+    htmlLang = Some(messages.lang.code)
 )(mainContentDefault)
