--- a/app/views/components/radios.scala.html
+++ b/app/views/components/radios.scala.html
@@ -65,5 +65,5 @@
     )
   },
   items = items,
-  errorMessage = form(formFieldId).error.map(err => ErrorMessage(content = Text(messages(err.message, err.args: _*))))
+  errorMessage = form(formFieldId).error.map(err => ErrorMessage.errorMessageWithDefaultStringsTranslated(content = Text(messages(err.message, err.args: _*))))
 ))
