[PRM-2183] - Added reasonable excuse guidance link

--- a/app/views/ReasonableExcuseSelectionPage.scala.html
+++ b/app/views/ReasonableExcuseSelectionPage.scala.html
@@ -47,7 +47,6 @@
 
 
     <p class="govuk-body">
-        @* TODO: Link to external guidance *@
-        @link("#", "reasonableExcuses.externalGuidanceLinkText", id = Some("external-guidance-link"), isExternal = true, classes = "govuk-link")
+        @link(appConfig.reasonableExcusesGuidanceLinkUrl, "reasonableExcuses.externalGuidanceLinkText", id = Some("external-guidance-link"), isExternal = true, classes = "govuk-link")
     </p>
 }
