--- a/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
@@ -34,7 +34,7 @@
         @dateInput(
             form = form,
             legendContent = messages(getMessageKeyForPage("whenDidBecomeUnable.headingAndTitle")),
-            legendClasses = Some("govuk-fieldset__legend--xl govuk-!-margin-bottom-0"),
+            legendClasses = Some("govuk-fieldset__legend--xl"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
