--- a/app/views/reasonableExcuseJourneys/health/WhenDidHospitalStayBeginPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHospitalStayBeginPage.scala.html
@@ -33,7 +33,7 @@
         @dateInput(
             form = form,
             legendContent = messages("healthReason.whenDidHospitalStayBegin.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend--xl govuk-!-margin-bottom-0"),
+            legendClasses = Some("govuk-fieldset__legend--xl"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
