--- a/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
@@ -35,7 +35,7 @@
         @dateInput(
             form = form,
             legendContent = messages(s"$messagePrefix.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend--xl govuk-!-margin-bottom-0"),
+            legendClasses = Some("govuk-fieldset__legend--xl"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
