[PRM-2287] - Updated message key to be more meaningful

--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -42,7 +42,7 @@
 
     @characterCount(
       form("late-appeal-text"),
-      label = messages("makingALateAppeal.callToAction"),
+      label = messages("makingALateAppeal.textAreaLabel"),
       hint = None,
       maxLength = Some(5000),
       isLabelPageHeading = false
