[PRM-2305] Added AppealByLetter kickout page

--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -81,9 +81,9 @@
         <li>
             <a class="govuk-link" href="@{appConfig.penaltiesFrontendUrl}" id="penalties-link">
                 @if(userRequest.isAgent) {
-                    @messages("agent.appealConfirmation.returnToPenalties")
+                    @messages("agent.common.returnToPenalties")
                 } else {
-                    @messages("appealConfirmation.returnToPenalties")
+                    @messages("common.returnToPenalties")
                 }
             </a>
         </li>
